--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "**/.DS_Store": true,
     "**/Thumbs.db": true,
     "**/node_modules": true,
+    "**/venv": true,
     "**/bower_components": true,
     "**/.sass-cache": true,
     "**/dist": true,
